# alter-ego

./: .dockerignore  .env.example  .env.staging.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  IMPLEMENTATION_PLAN.md  Makefile  PRODUCT.md  README.md  create-page  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  langfuse-dashboard  langfuse-login  langfuse-orgs  langfuse-project  langfuse-traces  login-form  login-form-detailed  login-form-filled  login-page  mutation-testing-report-phase1.md  mutation-testing-report.md  research_instagram_carousel_report.md
backend/: .coverage  .dockerignore  .env.example  .gitignore  .importlinter  AGENTS.md  CLAUDE.md  Dockerfile  README.md  coverage.xml  main.py  mutmut_config_agent_split.ini  pyproject.toml  pytest.ini  setup.cfg  vulture_whitelist.py
backend/.agent/handoff/: .reminder
backend/alembic/: README.md  env.py
backend/alembic/versions/: 0001_add_blog_posts_and_workflow.py  0002_phase3_workflow_collaboration.py  0004_add_carousel_assigned_reviewer.py  0006_add_slide_layout_strategy.py  0009_creator_asset_owner_sha256_unique.py  0011_drop_audit_stream_entry_id.py  63eaefa67b8c_initial_baseline_schema.py  a1b2c3d4e5f6_add_documents_scope_is_public.py  a7b8c9d0e1f2_add_palettes_and_theme_snapshot.py  b2c3d4e5f6a7_add_blog_post_origin_and_backfill.py  b8c9d0e1f2a3_add_carousel_run_progress_columns.py  c3d4e5f6a7b8_add_event_outbox.py  c9d0e1f2a3b4_add_carousel_needs_republish_since.py  d4e5f6a7b8c9_topup_carousel_blog_backfill.py  e5f6a7b8c9d0_add_blog_posts_distribution.py  f6a7b8c9d0e1_add_carousel_custom_visual_details.py
backend/alembic/versions_archived_pre_squash/: 0001_add_blog_posts_and_workflow.py  0003_add_carousel_workflow_status.py  0003_phase4_quality_polish.py  0005_add_persona_corrections.py  0007_add_carousel_image_generations.py  0008_carousel_presentation_contract.py  0009_creator_asset_owner_sha256_unique.py  0010_add_caption_en.py  0011_drop_audit_stream_entry_id.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  routes.py
backend/app/config/: settings.py
backend/app/services/: __init__.py  openai_service.py
backend/docs/: STRICT_TYPING_ROLLOUT.md
backend/scripts/: backfill_design_tokens.py  backfill_presentation_policy.py  carousel_rollback_drill.py  check_carousel_raw_updates.py  check_lengths.py  cleanup_carousel_checkpoints.py  export_openapi.py  export_palettes.py  fix_blog_content.py  fix_carousel_publish_ready.py  fix_carousel_slide_copy.py  fix_titles.py  fix_translations.py  migrate_phase5.py  mutation_test.py  recover_carousel_image_generations.py  regenerate_carousel_presentation.py  reopen_carousel_for_resend.py  repair_image_provider_combos.py  repair_workflow_malformed_drafts.py  seed_e2e_carousel_fixtures.py  seed_production.py  upgrade_inflight_presentation_policy_v2.py
backend/scripts/eval/: carousel_distinctness_eval.py
backend/src/.agent/handoff/: .reminder
backend/src/rag_backend/: main.py  monitoring_langfuse.py
backend/src/rag_backend/agents/: AGENTS.md  __init__.py  alter_ego_agent.py  carousel_editorial_orchestrator.py  carousel_orchestrator.py  carousel_workflow.py  carousel_workflow_engine.py  carousel_workflow_graph.py  carousel_workflow_nodes.py  chat_persistence_guard.py  chat_streaming.py  constants.py  content_draft_agent.py  feedback_learning.py  input_sanitizer.py  outline_agent.py  persona_agent.py  rag_agent.py  (+3 more)
backend/tests/: conftest.py  manual_test_resume.py
backend/tests/features/: admin.feature  admin_render_slides.feature  agent_harness.feature  alter_ego_chat_sse.feature  anonymous_chat.feature  auth.feature  blog_frontend_integration.feature  blog_post_management_ae0296.feature  carousel_content_distinctness.feature  carousel_content_fail_closed.feature  carousel_content_generation.feature  carousel_cta_i18n.feature  carousel_custom_palette.feature  carousel_design_phase_recovery.feature  carousel_design_refinement.feature  carousel_design_tokens_slide_count.feature  carousel_deterministic_repair.feature  carousel_editorial_publish_fixes.feature  carousel_editorial_workflow_safety_net.feature  carousel_i18n_design.feature  carousel_i18n_persistence.feature  carousel_image_provider_reroute_ae0308.feature  carousel_image_refinement.feature  carousel_null_safety.feature  carousel_pipeline_consolidation.feature  carousel_presentation_safety_net.feature  carousel_pt_casing_severity.feature  carousel_publishing_safety_net.feature  carousel_refine.feature  carousel_republish.feature  carousel_run_lock_safety.feature  carousel_run_progress_reaper.feature  carousel_slide_layout_strategies.feature  carousel_text_edit_no_regen.feature  carousel_typed_conflicts.feature  chat_persistence.feature  checkpoint_fixture_portability.feature  conversation_module.feature  conversations.feature  documents.feature  (+28 more)
backend/tests/integration/: conftest.py  test_admin_render_slides.py  test_api.py  test_blog_origin_migration.py  test_blog_post_management_ae0296.py  test_carousel_api.py  test_carousel_approved_hold_edit.py  test_carousel_i18n_api.py  test_carousel_project_lock_pg.py  test_carousel_rollback_smoke.py  test_carousel_workflow_safety_net.py  test_carousel_write_path_authz.py  test_chat_stream.py  test_distribution_home_migration.py  test_identity_conversation_safety_net.py  test_image_preset_api.py  test_knowledge_safety_net.py  test_outbox_after_commit.py  test_phase1.py  test_phase3_workflow.py  test_phase4_quality.py  test_presentation_safety_net.py  test_presentation_write_path_authz.py  test_public_blog_api_ae0297.py  test_publish_api.py  test_publishing_safety_net.py  test_schema_drift_live.py  test_strategy_endpoints.py  test_websocket_auth.py
backend/tests/load/: smoke.js  test_phase5_endpoints.py
backend/tests/property/: test_strategy_properties.py
backend/tests/snapshots/: __init__.py  openapi_routes.json
backend/tests/unit/: test_agent_routing.py  test_checkpoint_fixture_portability.py  test_mutation_agent_split.py  test_route_snapshot.py  test_sse_event_inventory_contract.py
(+3080 files in other folders)
