[project]
name = "rag-backend"
version = "0.1.0"
description = "Agentic RAG backend with hybrid search"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "ddgs>=9.14.1",
    "deepagents>=0.5.3",
    "img2pdf>=0.5.1",
    "dependency-injector>=4.49.0",
    "fastapi>=0.136.0",
    "langchain>=1.2.15",
    "langchain-core>=1.3.3",
    "langchain-openai>=1.1.14",
    "langchain-pinecone>=0.2.13",
    "langgraph>=1.1.8",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-checkpoint-postgres>=3.0.5",
    "openai>=2.32.0",
    "passlib[bcrypt]>=1.7.4",
    "pinecone[asyncio]",
    "playwright>=1.58.0",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "pypdf>=5.0.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.2",
    "python-multipart>=0.0.27",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.44.0",
    "websockets>=16.0",
    "email-validator>=2.3.0",
    "tenacity>=9.1.4",
    "langfuse>=3.0.0,<4.0.0",
    "redis>=5.2.0",
    "langsmith>=0.8.0",
    "starlette>=1.0.1",
]

[tool.uv]
override-dependencies = [
    "idna>=3.15",
    "urllib3>=2.7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "black>=26.3.1",
    "httpx>=0.28.1",
    "mutmut>=3.5.0",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-pythonpath>=0.7.3",
    "ruff>=0.15.11",
    "vulture>=2.14.0",
    "diff-cover>=9.2.0",
    "interrogate>=1.7.0",
    "import-linter>=2.2",
    "bandit[toml]>=1.7.10",
    "pip-audit>=2.7.0",
    "types-PyYAML>=6.0.12.20240917",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.diff_cover]
compare_branch = "origin/main"
fail_under = 75

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
# Strict: ban Any usage completely
disallow_any_explicit = true
# disallow_any_expr = true  # disabled: too aggressive with untyped third-party libs
disallow_any_generics = true
# disallow_any_decorated = true  # disabled: untyped library decorators trigger constantly
show_error_codes = true

# Exclude src/ directory when running from src/ to avoid src.rag_backend vs rag_backend conflict
exclude = "src/"

[[tool.mypy.overrides]]
module = [
    "rag_backend.api.schemas",
    "rag_backend.api.schemas.*",
    "rag_backend.api.routes.auth",
    "rag_backend.infrastructure.config.settings",
]
disable_error_code = ["explicit-any", "type-arg"]

# SQLAlchemy ORM models and LangGraph workflow modules carry third-party typing noise.
[[tool.mypy.overrides]]
module = [
    "rag_backend.infrastructure.database.models.*",
    "rag_backend.agents.*",
    "rag_backend.agents.carousel_orchestrator.*",
    "rag_backend.application.services.carousel.graph",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "rag_backend.api.app",
]
disable_error_code = ["type-var", "return-value", "arg-type", "type-arg"]

[[tool.mypy.overrides]]
module = [
    "rag_backend.api.routes.*",
    "rag_backend.api.dependencies.*",
]
disable_error_code = [
    "assignment",
    "arg-type",
    "attr-defined",
    "unreachable",
    "call-overload",
    "explicit-any",
    "no-untyped-def",
    "return-value",
    "type-arg",
    "dict-item",
    "index",
    "var-annotated",
    "unused-ignore",
    "misc",
    "list-item",
    "union-attr",
    "call-arg",
    "typeddict-unknown-key",
]

[[tool.mypy.overrides]]
module = [
    "rag_backend.api.middleware.*",
]
disable_error_code = ["return-value", "arg-type", "assignment", "no-untyped-def"]

[[tool.mypy.overrides]]
module = [
    "rag_backend.infrastructure.external.*",
    "rag_backend.infrastructure.database.user_repository",
    "rag_backend.infrastructure.database.config",
    "rag_backend.infrastructure.events.*",
    "rag_backend.infrastructure.retrieval.*",
    "rag_backend.infrastructure.telemetry.*",
    "rag_backend.infrastructure.logging",
    "rag_backend.infrastructure.config.settings",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "rag_backend.application.services.*",
    "rag_backend.application.tools.*",
    "rag_backend.application.workers.*",
    "rag_backend.monitoring_langfuse",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "rag_backend.domain.models.*",
]
disable_error_code = ["type-arg", "no-any-return"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "F", "I", "N", "W", "UP", "B", "SIM",
    # Security & bug prevention (Tier 1)
    "S",       # flake8-bandit — hardcoded passwords, unsafe eval, missing timeouts
    "BLE",     # blind except — prevents bare `except Exception:`
    # Control flow & simplification (Tier 1)
    "RET",     # return consistency — early returns, no implicit None after return
    "RSE",     # raise consistency — correct raise usage
    "C4",      # comprehensions — efficient list/dict/set patterns
    "SIM",     # simplification — already enabled, kept for clarity
    # API quality (Tier 1)
    "FBT",     # boolean trap — no boolean positional args
    "A",       # builtins shadow — don't shadow `id`, `type`, `list`, etc.
    "ERA",     # eradicate — commented-out code
    "ARG",     # unused arguments
    "FAST",    # FastAPI-specific — Annotated deps, unused path params
    # Complexity (Tier 2)
    "PLR",     # pylint refactor — branches, statements, args, locals
    "C90",     # mccabe complexity
    "TRY",     # tryceratops — better exception handling patterns
    # Ruff-specific
    "RUF",     # RUF100 catches unused noqa comments
]
ignore = [
    # Test-specific rules handled via per-file-ignores
    # FastAPI dependency injection pattern triggers B008
    "B008",    # Do not perform function call in argument defaults (FastAPI Depends)
    # Health-check endpoints legitimately catch broad exceptions from external services
    "BLE001",  # Do not catch blind exception: `Exception`
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "S101",   # assert_used — idiomatic in tests
    "ANN",    # missing-type annotations — test fixtures are often untyped
    "PLR2004", # magic-value-in-comparison — HTTP status codes in asserts
    "ARG001", # unused-function-argument — mock callbacks/fixtures
    "ARG002", # unused-method-argument — test helpers
    "S108",   # hardcoded-temp-directory — test tmp paths
    "S106",   # hardcoded-password — test tokens/credentials
    "S105",   # hardcoded password variable names in tests
    "E501",   # long docstrings/assert messages in tests
    "SIM105", # try-except-pass in integration test parsers
    "N806",   # non-lowercase-variable — test factory variables
    "F841",   # unused-variable — test setup variables
    "RUF059", # unused-unpacked-variable — mock tuple unpacking
    "TRY003", # raise-vanilla-args — test helper exceptions
    "PLR0913", # too-many-arguments — test methods with many fixtures
    "ERA001", # Gherkin scenario reference comments in test files
]
# Pre-commit passes paths as backend/tests/... from repo root
"backend/tests/**/*" = [
    "S101", "ANN", "PLR2004", "ARG001", "ARG002", "S108", "S106", "S105",
    "E501", "SIM105", "N806", "F841", "RUF059", "TRY003", "PLR0913", "ERA001",
]
"**/__init__.py" = ["F401"]  # Re-exports are OK
"src/rag_backend/api/routes/*.py" = [
    "FAST001",  # response_model is intentionally explicit in FastAPI routes
    "FAST002",  # Depends() in function signature is standard FastAPI pattern
    "ARG001",   # auth dependencies are used by FastAPI DI but not in function body
    "FBT001",   # boolean query params are standard in FastAPI filters
]
"src/rag_backend/api/app.py" = ["PLR0911", "FAST001"]
"src/rag_backend/api/constants.py" = ["S105"]
"src/rag_backend/api/routes/documents.py" = ["PLR0913", "FBT002", "E501"]
"src/rag_backend/domain/constants/plagiarism.py" = ["S105"]
"src/rag_backend/domain/models/rubric.py" = ["S105", "PLR0913", "FBT001"]
"src/rag_backend/domain/models/persona.py" = ["PLR2004"]
"src/rag_backend/application/services/chat_stream_service.py" = ["FBT001", "SIM105"]
"src/rag_backend/application/services/workflow_event_service.py" = ["PLR0913"]
"src/rag_backend/infrastructure/config/settings.py" = ["S104"]
"src/rag_backend/infrastructure/auth.py" = ["TRY300"]
"src/rag_backend/infrastructure/langfuse_client.py" = ["TRY300"]
"src/rag_backend/infrastructure/database/user_repository.py" = ["TRY003"]
"src/rag_backend/infrastructure/external/pinecone_store.py" = ["ARG002"]
"src/rag_backend/domain/retry.py" = ["SIM103"]
"src/rag_backend/scripts/bootstrap_admin.py" = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pylint]
max-branches = 12
max-statements = 50
max-args = 6
max-returns = 6
max-locals = 15
max-nested-blocks = 5

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # assert_used — we use assert in tests, excluded via exclude_dirs anyway

[tool.interrogate]
fail-under = 80
exclude = ["tests", "build", "docs"]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-nested-functions = true
ignore-nested-classes = true
ignore-setters = true
verbose = 0
quiet = false
color = true

[tool.mutmut]
paths_to_mutate = [
    "src/rag_backend/application/services/carousel_refinement.py",
    "src/rag_backend/application/services/rag_agent_tools.py",
    "src/rag_backend/application/services/carousel_agent.py",
    "src/rag_backend/application/services/carousel/graph.py",
    "src/rag_backend/agents/persona_agent.py",
    "src/rag_backend/agents/quality_agent.py",
    "src/rag_backend/agents/feedback_learning.py",
    "src/rag_backend/agents/carousel_workflow.py",
    "src/rag_backend/application/services/blog_post_ai_service.py",
]
tests_dir = [
    "tests/unit/application",
    "tests/unit/agents",
    "tests/unit/infrastructure",
    "tests/unit/api",
]
also_copy = ["src", "tests", "setup.cfg", "pyproject.toml", "pytest.ini", ".gitignore"]
runner_options = "-x -q --no-header"
debug = false
dict_sync = false
