[project]
name = "rag-backend"
version = "0.1.0"
description = "Agentic RAG backend with hybrid search"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.31.0",
    "ddgs>=9.14.1",
    "deepagents>=0.5.3",
    "img2pdf>=0.5.1",
    "jinja2>=3.1.6",  # runtime dep: agents/prompts/registry.py renders Jinja2 prompt templates
    "dependency-injector>=4.49.0",
    "fastapi>=0.136.0",
    "langchain>=1.3.9",
    "langchain-core>=1.3.3",
    "langchain-openai>=1.1.14",
    "langchain-pinecone>=0.2.13",
    "langgraph>=1.1.8",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-checkpoint-postgres>=3.0.5",
    "openai>=2.32.0",
    "passlib[bcrypt]>=1.7.4",
    "pinecone[asyncio]",
    "playwright>=1.58.0",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.13.0",
    "psycopg[binary]>=3.3.0",
    "pypdf>=6.12.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.2",
    "cryptography>=48.0.1",  # GHSA-537c-gmf6-5ccf
    "python-multipart>=0.0.31",  # CVE-2026-53538/53539/53540
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.44.0",
    "websockets>=14,<16",  # capped <16: langchain 1.3.9 → langgraph-sdk 0.4.2 requires websockets<16 (AE-0182)
    "email-validator>=2.3.0",
    "tenacity>=9.1.4",
    "langfuse>=3.0.0,<4.0.0",
    "redis>=5.2.0",
    "langsmith>=0.8.0",
    "starlette>=1.3.1",  # CVE-2026-54282/54283
]

[tool.uv]
override-dependencies = [
    "idna>=3.15",
    "urllib3>=2.7.0",
    "aiohttp>=3.14.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "black>=26.3.1",
    "httpx>=0.28.1",
    "mutmut>=3.5.0",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-pythonpath>=0.7.3",
    "ruff>=0.15.11",
    "vulture>=2.14.0",
    "diff-cover>=9.2.0",
    "interrogate>=1.7.0",
    "import-linter>=2.2",
    "bandit[toml]>=1.7.10",
    "pip-audit>=2.7.0",
    "pip>=26.1.2",
    "types-PyYAML>=6.0.12.20240917",
    "hypothesis>=6.155.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.coverage.run]
# Files excluded from coverage measurement (so they don't appear in
# coverage.xml and are not counted by diff-cover). These are scaffolding,
# composition-root wiring, entrypoints, and operational scripts — none are
# unit-tested business logic, and counting them would understate real
# coverage and force gaming. Business-logic modules are NOT omitted.
omit = [
    # AE-0081 module scaffold skeleton (a copy-me template, not live code).
    "*/modules/_template/*",
    # AE-0080 composition root: branchy DI wiring exercised via integration,
    # not unit tests; relocated byte-identical from api/app.py.
    "*/bootstrap/*",
    # ASGI/uvicorn entrypoint (only an `app = create_app()` + __main__ block).
    "*/rag_backend/main.py",
    # Operational scripts (e.g. admin bootstrap), run manually, not unit-tested.
    "*/rag_backend/scripts/*",
    # Autogenerated DB migrations (also outside the rag_backend package).
    "*/alembic/*",
]

[tool.diff_cover]
compare_branch = "origin/main"
fail_under = 75

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
# Strict: ban Any usage completely
disallow_any_explicit = true
# disallow_any_expr = true  # disabled: too aggressive with untyped third-party libs
disallow_any_generics = true
# disallow_any_decorated = true  # disabled: untyped library decorators trigger constantly
show_error_codes = true
pretty = true

# MYPYPATH=src must be set when running mypy so imports resolve as rag_backend.*
# Do not run mypy src/ directly; always use: MYPYPATH=src mypy -p rag_backend

[[tool.mypy.overrides]]
module = [
    "rag_backend.api.schemas",
    "rag_backend.api.schemas.*",
    "rag_backend.api.routes.auth",
    "rag_backend.infrastructure.config.settings",
]
disable_error_code = ["explicit-any", "type-arg"]

# SQLAlchemy ORM models and LangGraph workflow modules carry third-party typing noise.
[[tool.mypy.overrides]]
module = [
    "rag_backend.infrastructure.database.models.*",
    "rag_backend.agents.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    # AE-0080: composition-root app factory relocated from api.app to
    # bootstrap.app_factory (byte-identical wiring); overrides moved with it.
    "rag_backend.bootstrap.app_factory",
]
disable_error_code = ["type-var", "return-value", "arg-type", "type-arg", "import-not-found"]

[[tool.mypy.overrides]]
module = [
    "rag_backend.api.routes.*",
    "rag_backend.api.dependencies.*",
]
disable_error_code = [
    "assignment",
    "arg-type",
    "attr-defined",
    "unreachable",
    "call-overload",
    "explicit-any",
    "no-untyped-def",
    "return-value",
    "type-arg",
    "dict-item",
    "index",
    "var-annotated",
    "unused-ignore",
    "misc",
    "list-item",
    "union-attr",
    "call-arg",
    "typeddict-unknown-key",
    "untyped-decorator",
    "no-any-return",
    "import-not-found",
]

[[tool.mypy.overrides]]
module = [
    "rag_backend.api.middleware.*",
]
disable_error_code = ["return-value", "arg-type", "assignment", "no-untyped-def", "import", "misc", "untyped-decorator"]

[[tool.mypy.overrides]]
module = [
    "rag_backend.infrastructure.external.*",
    "rag_backend.infrastructure.database.user_repository",
    "rag_backend.infrastructure.database.config",
    "rag_backend.infrastructure.database.carousel_repository",
    "rag_backend.infrastructure.events.*",
    "rag_backend.infrastructure.retrieval.*",
    "rag_backend.infrastructure.telemetry.*",
    "rag_backend.infrastructure.logging",
    "rag_backend.infrastructure.config.settings",
    "rag_backend.infrastructure.container",
    "rag_backend.infrastructure.langfuse_client",
    "rag_backend.infrastructure.monitoring_langfuse",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "rag_backend.application.services.*",
    "rag_backend.application.tools.*",
    "rag_backend.application.workers.*",
    "rag_backend.infrastructure.monitoring_langfuse",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "rag_backend.domain.models.*",
]
disable_error_code = ["type-arg", "no-any-return", "explicit-any", "assignment"]

[tool.ruff]
target-version = "py311"
line-length = 88
preview = true

[tool.ruff.lint]
select = [
    # Core rules
    "E", "F", "W", "I", "N", "UP", "B", "SIM",
    # Security & bug prevention (Tier 1)
    "S",       # flake8-bandit — hardcoded passwords, unsafe eval, missing timeouts
    "BLE",     # blind except — prevents bare `except Exception:`
    # Control flow & simplification (Tier 1)
    "RET",     # return consistency — early returns, no implicit None after return
    "RSE",     # raise consistency — correct raise usage
    "C4",      # comprehensions — efficient list/dict/set patterns
    # API quality (Tier 1)
    "FBT",     # boolean trap — no boolean positional args
    "A",       # builtins shadow — don't shadow `id`, `type`, `list`, etc.
    "ERA",     # eradicate — commented-out code
    "ARG",     # unused arguments
    "FAST",    # FastAPI-specific — Annotated deps, unused path params
    # Complexity (Tier 2)
    "PLR",     # pylint refactor — branches, statements, args, locals
    "C90",     # mccabe complexity
    "TRY",     # tryceratops — better exception handling patterns
    # Ruff-specific
    "RUF",     # RUF100 catches unused noqa comments
    # Performance hints
    "PERF",    # performance hints
    "PIE",     # pie lint rules
    "PTH",     # use pathlib
]
ignore = [
    # FastAPI dependency injection pattern triggers B008
    "B008",    # Do not perform function call in argument defaults (FastAPI Depends)
    # Health-check endpoints legitimately catch broad exceptions from external services
    "BLE001",  # Do not catch blind exception: `Exception`
    # Complex guard clauses allowed in production
    "RET501",
    "RET502",
    "RET503",
    "RET504",
    "RET505",
]

[tool.ruff.lint.pep8-naming]
# Enforce strict naming conventions
ignore-names = [
    "setUp", "tearDown", "setUpClass", "tearDownClass",
    "setUpModule", "tearDownModule", "asyncSetUp",
    "asyncTearDown", "setUpTestData", "failureException",
    "longMessage", "maxDiff",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "S101",   # assert_used — idiomatic in tests
    "ANN",    # missing-type annotations — test fixtures are often untyped
    "PLR2004", # magic-value-in-comparison — HTTP status codes in asserts
    "ARG001", # unused-function-argument — mock callbacks/fixtures
    "ARG002", # unused-method-argument — test helpers
    "S108",   # hardcoded-temp-directory — test tmp paths
    "S106",   # hardcoded-password — test tokens/credentials
    "S105",   # hardcoded password variable names in tests
    "E501",   # long docstrings/assert messages in tests
    "SIM105", # try-except-pass in integration test parsers
    "N806",   # non-lowercase-variable — test factory variables
    "N807",   # dunder function name — test setup methods
    "F841",   # unused-variable — test setup variables
    "RUF059", # unused-unpacked-variable — mock tuple unpacking
    "TRY003", # raise-vanilla-args — test helper exceptions
    "PLR0913", # too-many-arguments — test methods with many fixtures
    "PLR0912", # too-many-branches
    "PLR0911", # too-many-return-methods
    "PLR0915", # too-many-locals
    "PLR0914", # too-many-locals
    "PLR0917", # too-many-positional-args
    "PLR0904", # too-many-public-methods — mutation suites need broad coverage
    "RUF069",  # float-equality — deterministic mocked scores in tests
    "RUF029",  # unused-async — AsyncMock side_effect helpers
    "B903",    # class-as-data-structure — lightweight test stubs
    "C901",   # mccabe complexity
    "PLR6301", # static methods
    "FBT001", # boolean trap
    "FBT002", # boolean default value
    "E402",   # module level import
    "ERA001", # Gherkin scenario reference comments in test files
    "PLR6201", "ARG005", "PERF401", "B007",
]
# Pre-commit passes paths as backend/tests/... from repo root
"backend/tests/**/*" = [
    "S101", "ANN", "PLR2004", "ARG001", "ARG002", "S108", "S106", "S105",
    "E501", "SIM105", "N806", "N807", "F841", "RUF059", "TRY003", "PLR0913",
    "PLR0912", "PLR0911", "PLR0915", "PLR0914", "PLR0917", "PLR0904",
    "RUF069", "RUF029", "B903", "C901", "PLR6301",
    "FBT001", "FBT002", "E402", "ERA001", "PLR6201", "ARG005", "PERF401", "B007",
]
"**/__init__.py" = ["F401"]  # Re-exports are OK
"src/rag_backend/infrastructure/config/settings.py" = ["S104"]
"src/rag_backend/infrastructure/auth.py" = ["TRY300"]
"src/rag_backend/infrastructure/langfuse_client.py" = ["TRY300"]
"src/rag_backend/infrastructure/database/user_repository.py" = ["TRY003"]
"src/rag_backend/infrastructure/database/carousel_repository.py" = ["FBT001", "FBT002", "PLR0913",]  # TODO: AE-0048 — pre-existing, fix when touching
"src/rag_backend/scripts/bootstrap_admin.py" = ["E501"]
"scripts/**/*" = ["S404", "S603", "S108", "TRY003", "PLR0911", "E501"]
"backend/scripts/**/*" = ["S404", "S603", "S108", "TRY003", "PLR0911", "E501"]
"src/rag_backend/application/services/chat_stream_service.py" = ["FBT001", "SIM105"]
"src/rag_backend/domain/retry.py" = ["SIM103"]
# PLR091x: Complexity thresholds — some files need more flexibility
"src/rag_backend/agents/alter_ego_agent.py" = ["PLR0914", "FBT001", "PLR0913", "PLR0917"]
"src/rag_backend/agents/rag_agent.py" = ["PLR0914", "FBT001", "PLR0913", "PLR0917"]
"src/rag_backend/application/services/carousel/refinement_service.py" = ["PLR0913"]
"src/rag_backend/application/services/carousel_refinement.py" = ["C901", "PLR0912", "PLR0913", "PLR0914"]
"src/rag_backend/application/services/content_calendar_service.py" = ["PLR0912", "PLR0913"]
"src/rag_backend/application/services/blog_post_service.py" = ["PLR0913"]
"src/rag_backend/application/services/carousel/nodes/content/core.py" = ["PLR0912", "PLR0913", "C901", "PLR0914",]  # TODO: AE-0048 — pre-existing, fix when touching
"src/rag_backend/application/services/editorial_analytics_service.py" = ["PLR0912", "PLR0913", "PLR0914"]
"src/rag_backend/application/services/accessibility_check_service.py" = ["PLR0913", "PLR0912"]
"src/rag_backend/application/services/persona_service.py" = ["PLR0913"]
"src/rag_backend/application/services/rubric_service.py" = ["PLR0913"]
"src/rag_backend/application/services/quality_evaluation_service.py" = ["PLR0912", "PLR0913"]
"src/rag_backend/application/services/tools/research_tool.py" = ["PLR0912", "PLR0913"]
"src/rag_backend/infrastructure/retrieval/hybrid_retriever.py" = ["PLR0911", "PLR0913", "PLR0912"]
"src/rag_backend/infrastructure/retrieval/document_processor.py" = ["PLR0912", "PLR0913"]
"src/rag_backend/infrastructure/external/pinecone_store.py" = ["ARG002", "PLR0912", "PLR0913"]
"src/rag_backend/agents/constants.py" = ["E501",]  # TODO: AE-0048 — pre-existing, fix when touching
"src/rag_backend/application/services/carousel_template/__init__.py" = []
"src/rag_backend/application/services/carousel_template/slides.py" = ["PLR0913", "PLR0917"]  # TODO: AE-0048 — pre-existing, fix when touching
"src/rag_backend/application/services/carousel_template/html_template.py" = ["PLR0913", "E501", "PLR0912", "PLR0914", "PLR0917"]  # TODO: AE-0048 — pre-existing, fix when touching
"src/rag_backend/application/services/image_style_strategies.py" = ["PLR0913"]
"src/rag_backend/application/services/workflow_event_service.py" = ["PLR0913", "PLR0912"]
"src/rag_backend/application/services/workflow_failure_alert_service.py" = ["PLR0913", "E501",]  # TODO: AE-0048 — pre-existing, fix when touching
"src/rag_backend/application/services/notification_service.py" = ["PLR0913", "PLR0917"]  # TODO: AE-0048 — pre-existing, fix when touching
"src/rag_backend/application/services/optimistic_lock_service.py" = ["PLR0913"]
"src/rag_backend/application/services/pdf_slide_builder.py" = ["PLR0913", "PLR0912"]
"src/rag_backend/application/services/plagiarism_detection_service.py" = ["PLR0912", "PLR0913", "PLR1702"]
"src/rag_backend/application/services/seo_analysis_service.py" = ["PLR0913"]
"src/rag_backend/application/services/writing_style_profile.py" = ["PLR0913", "PLR0917"]  # TODO: AE-0048 — pre-existing, fix when touching
"src/rag_backend/application/tools/carousel/generate_carousel.py" = ["PLR0913", "PLR0917"]  # TODO: AE-0048 — pre-existing, fix when touching
"src/rag_backend/application/tools/carousel/refine_copy.py" = ["PLR0913", "RUF029", "C901", "PLR0911", "PLR0917",]  # TODO: AE-0048 — pre-existing, fix when touching
"src/rag_backend/application/tools/carousel/refine_design.py" = ["PLR0912", "PLR0911",]  # TODO: AE-0048 — pre-existing, fix when touching
"src/rag_backend/application/workers/workflow_workers.py" = ["PLR0913"]
"src/rag_backend/domain/constants/ai_agents.py" = ["E501",]  # TODO: AE-0048 — pre-existing, fix when touching
"src/rag_backend/domain/protocols/vector.py" = []
"src/rag_backend/infrastructure/cache/ai_response_cache.py" = ["PLR0913", "PLR0917",]  # TODO: AE-0048 — pre-existing, fix when touching
"src/rag_backend/infrastructure/database/blog_post_repository.py" = ["PLR0913"]
"src/rag_backend/infrastructure/events/memory_event_publisher.py" = ["PLR0913"]
"src/rag_backend/infrastructure/external/openai_llm.py" = ["PLR0913"]
"src/rag_backend/infrastructure/external/playwright_export.py" = ["PLR0913", "PLR0914",]  # TODO: AE-0048 — pre-existing, fix when touching
"src/rag_backend/infrastructure/logging.py" = ["E501",]  # TODO: AE-0048 — pre-existing, fix when touching
# RUF029: Functions declared async but don't await — remove where safe
"src/rag_backend/api/dependencies/**/*.py" = ["RUF029"]
"src/rag_backend/api/middleware/error_handler*.py" = ["RUF029"]
"src/rag_backend/api/middleware/auth.py" = ["RUF029"]
"src/rag_backend/application/services/carousel/nodes/design.py" = ["C901", "PLR0912", "PLR0913",]  # TODO: AE-0048 — pre-existing, fix when touching
"src/rag_backend/application/services/carousel/nodes/export.py" = ["PLR0917", "PLR0915"]
"src/rag_backend/application/services/carousel/nodes/content/slides.py" = ["E402"]
"src/rag_backend/application/services/carousel/theme_resolver.py" = ["C901", "PLR0912"]
# E501: Line length — wrap where practical, suppress where not
"src/rag_backend/domain/metrics.py" = ["E501"]
"src/rag_backend/domain/constants/plagiarism.py" = ["S105", "E501"]
"src/rag_backend/domain/constants/input_sanitizer.py" = ["E501"]
"src/rag_backend/domain/models/persona.py" = ["PLR2004", "E501"]
"src/rag_backend/domain/models/rubric.py" = ["S105", "PLR0913", "FBT001", "E501", "PLR0917",]  # TODO: AE-0048 — pre-existing, fix when touching
"src/rag_backend/domain/models/notification.py" = ["E501"]
"src/rag_backend/domain/models/blog_post.py" = ["E501"]
"src/rag_backend/domain/models/workflow_audit_log.py" = ["E501"]
"src/rag_backend/domain/models/content_lock.py" = ["E501"]
"src/rag_backend/domain/models/quality_rubric.py" = ["E501"]
"src/rag_backend/domain/models/persona_profile.py" = ["E501"]
"src/rag_backend/domain/constants/auth.py" = ["S105"]
"src/rag_backend/api/routes/auth.py" = ["S105"]
"src/rag_backend/agents/prompts/registry.py" = ["S105"]
"src/rag_backend/api/schemas.py" = ["E501"]
# Broad ignores for remaining style issues
"src/rag_backend/agents/*.py" = ["PLR6301", "PLR0913", "PLR0917", "E501", "PLR0914", ]
# __init__.py files: E402 tolerated for re-exports
"src/rag_backend/__init__.py" = ["E402"]
"src/rag_backend/api/__init__.py" = ["E402"]
"src/rag_backend/application/__init__.py" = ["E402"]
"src/rag_backend/domain/__init__.py" = ["E402"]
"src/rag_backend/infrastructure/__init__.py" = ["E402"]
"src/rag_backend/agents/__init__.py" = ["E402"]
"src/rag_backend/domain/constants/*.py" = ["E402"]
# AE-0048: Blanket ignores removed. CI guards enforce no new ones.
"src/rag_backend/api/routes/*.py" = [
    "FAST001", "FAST002", "ARG001", "FBT001", "E501",
    "PLR0913", "PLR0917",   # TODO: AE-0048 — pre-existing, fix when touching
]
"src/rag_backend/api/routes/carousels/*.py" = [
    "FAST001", "FAST002", "ARG001", "FBT001", "E501",
    "PLR0913", "PLR0917", "C901", "PLR0912", "PLR0911", "PLR0914",
    # TODO: AE-0048 — pre-existing, fix when touching
]
# AE-0080: composition-root app factory relocated from api/app.py to
# bootstrap/app_factory.py (byte-identical wiring); ignores moved with it.
"src/rag_backend/bootstrap/app_factory.py" = ["PLR0911", "FAST001", "RUF029"]
"src/rag_backend/api/constants.py" = ["S105"]
"src/rag_backend/api/routes/documents.py" = ["PLR0913", "FBT002", "E501"]
# AE-0086: Alembic migration files are autogenerated; their numeric module
# names (N999), codegen line lengths (E501), and large baseline upgrade/
# downgrade bodies (PLR0915) are intrinsic to the tool's output.
"alembic/versions/*.py" = ["N999", "E501", "PLR0915"]
"alembic/versions_archived_pre_squash/*.py" = ["N999", "E501", "PLR0915"]
"src/rag_backend/infrastructure/database/models/*.py" = ["E501"]
"src/rag_backend/infrastructure/database/config.py" = ["E501"]
"src/rag_backend/infrastructure/external/*.py" = ["E501"]
"src/rag_backend/application/services/carousel/*.py" = ["E501"]
"src/rag_backend/agents/prompts/*.py" = ["E501"]


[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-branches = 8
max-statements = 50
max-args = 3
max-returns = 5
max-locals = 12
max-nested-blocks = 4


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # assert_used — we use assert in tests, excluded via exclude_dirs anyway

[tool.interrogate]
fail-under = 80
exclude = ["tests", "build", "docs"]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-nested-functions = true
ignore-nested-classes = true
ignore-setters = true
verbose = 0
quiet = false
color = true

[tool.mutmut]
paths_to_mutate = [
    "src/rag_backend/application/services/carousel/editorial_workflow_service.py",
    "src/rag_backend/application/services/carousel/editorial_workflow_support.py",
    "src/rag_backend/application/services/carousel/nodes/export.py",
    "src/rag_backend/api/routes/carousels/preview.py",
    "src/rag_backend/application/services/carousel/editorial_workflow_resume_runner.py",
    "src/rag_backend/agents/carousel_editorial_orchestrator.py",
    "src/rag_backend/application/services/carousel/phase_subagents.py",
    "src/rag_backend/agents/carousel_workflow.py",
    "src/rag_backend/application/services/carousel_refinement.py",
    "src/rag_backend/application/services/rag_agent_tools.py",
    "src/rag_backend/application/services/carousel/editorial_workflow_support.py",
    "src/rag_backend/agents/persona_agent.py",
    "src/rag_backend/agents/quality_agent.py",
    "src/rag_backend/agents/feedback_learning.py",
    "src/rag_backend/application/services/blog_post_ai_service.py",
    "src/rag_backend/application/tools/carousel/generate_carousel.py",
]
tests_dir = [
    "tests/unit/application",
    "tests/unit/agents",
    "tests/unit/infrastructure",
    "tests/unit/api",
    "tests/integration/carousel_consolidation",
]
also_copy = ["src", "tests", "setup.cfg", "pyproject.toml", "pytest.ini", ".gitignore"]
pytest_add_cli_args = [
    "-q",
    "--no-header",
    "-k",
    "not test_renders_both_languages_when_en_present",
]
debug = true
dict_sync = false
